# terrain_generation

./: .gitignore  CMakeLists.txt  README.md
src/: compute_pass.cpp  compute_pass.h  cube_sphere_mesh.h  framebuffer.cpp  framebuffer.h  heightmap.cpp  heightmap.h  main.cpp  options_menu.cpp  options_menu.h  perlin_noise.cpp  perlin_noise.h  terrain_mesh.cpp  terrain_mesh.h  terrain_plane.cpp  terrain_plane.h  ui.cpp  ui.h
src/app/: camera.cpp  camera.h  orbit_camera.cpp  orbit_camera.h  ui.cpp  ui.h
src/engine/: compute_pass.cpp  compute_pass.h  framebuffer.cpp  shaders.cpp  shaders.h
src/planet/: cube_sphere_mesh.cpp  terrain_mesh.h
src/shaders/: buffer_a.frag  common.glsl  cube_face.glsl  debug_cubemap_face.frag  default.frag  default.vert  erosion.comp  fullscreen.vert  gbuffer.frag  lighting.frag  noise.glsl  plates.glsl  terrain.frag  terrain.glsl  terrain.vert  terrain_flat.frag  terrain_gbuffer.frag
src/shaders/lighting/: lighting.frag  lighting_plane.frag
src/shaders/planet/: debug_cubemap_face.frag  debug_heightmap_2d.frag  detail.comp  erosion.comp  erosion_flat.comp  terrain.vert  terrain_gbuffer.frag  terrain_plane_gbuffer.frag  water.vert  water_gbuffer.frag  wireframe.frag
src/shaders/reference/: buffer_a.frag  buffer_b.frag  terrain_flat.frag
src/utils/: camera.cpp  camera.h  orbit_camera.cpp  orbit_camera.h  shaders.cpp  shaders.h
